Revision history for Music-ScaleNote

{{$NEXT}}

0.0301 2018-04-04 19:13:22
    - Remove the unnecessary octave boundaries.

0.03 2018-04-04 16:54:37
    - Check for enharmonic equivalent matches too!

0.0202 2018-04-04 15:31:05
    - Added missing defined keyword!
    - Improved verbose output.

0.0201 2018-04-04 15:08:58
    - Improve documentation.

0.02 2018-04-04 14:48:18
    - Added boundary checks.
    - Added the verbose attribute.

0.0103 2018-04-03 21:28:13
    - Added the missing scale_name attribute default.
    - Reword the package abstract.

0.0102 2018-04-03 20:48:38
    - Band-aid code boundary case...

0.0101 2018-04-03 19:31:28
    - Minor fix to the documentation.

0.01 2018-04-03 19:24:46
    - Minted by Dist::Zilla.